Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -321,10 +321,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 415,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T10:14:50.057154Z",
+     "start_time": "2019-04-09T10:14:50.052167Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.96857843 0.69278746 0.93070463 0.04598006 0.23026113]\n",
+      " [0.5987258  0.17178754 0.53538045 0.71455273 0.51054706]\n",
+      " [0.45307806 0.42238429 0.46379364 0.21737547 0.02846332]\n",
+      " [0.2148527  0.52638449 0.39189096 0.33588864 0.31811996]\n",
+      " [0.97864049 0.96789775 0.72952398 0.00984682 0.18883318]]\n",
+      "2.1288814231116158\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = np.random.uniform(size=(5,5))\n",
+    "print(temp)\n",
+    "print(np.diag(temp).sum())\n",
+    "evalue,eveec"
+   ]
   },
   {
    "cell_type": "code",
