Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -321,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 419,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T10:14:50.057154Z",
-     "start_time": "2019-04-09T10:14:50.052167Z"
+     "end_time": "2019-04-09T10:15:21.142995Z",
+     "start_time": "2019-04-09T10:15:21.137011Z"
     }
    },
    "outputs": [
@@ -333,28 +333,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.96857843 0.69278746 0.93070463 0.04598006 0.23026113]\n",
-      " [0.5987258  0.17178754 0.53538045 0.71455273 0.51054706]\n",
-      " [0.45307806 0.42238429 0.46379364 0.21737547 0.02846332]\n",
-      " [0.2148527  0.52638449 0.39189096 0.33588864 0.31811996]\n",
-      " [0.97864049 0.96789775 0.72952398 0.00984682 0.18883318]]\n",
-      "2.1288814231116158\n"
+      "[[0.89331633 0.68456331 0.25258339 0.82745072 0.29307408]\n",
+      " [0.47457878 0.91735075 0.54523007 0.07586395 0.99624075]\n",
+      " [0.65001589 0.28521589 0.88211856 0.18379295 0.85724192]\n",
+      " [0.40704497 0.11202436 0.04486211 0.78768325 0.11895718]\n",
+      " [0.98123446 0.293183   0.11991856 0.91142301 0.22079928]]\n",
+      "3.701268163918878\n",
+      "3.7012681639188787\n"
      ]
     }
    ],
    "source": [
     "temp = np.random.uniform(size=(5,5))\n",
     "print(temp)\n",
+    "evalue,evector = np.linalg.eigh(temp)\n",
     "print(np.diag(temp).sum())\n",
-    "evalue,eveec"
+    "print(evalue.sum())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"https://i.imgur.com/Isv9zzD.png\" >"
+   ]
   },
   {
    "cell_type": "code",
@@ -370,7 +372,8 @@
     "# Reference \n",
     "1. results, P., & Rieble, N. (2016). PCA in numpy and sklearn produces different results. Cross Validated. Retrieved 9 April 2019, from https://stats.stackexchange.com/questions/235882/pca-in-numpy-and-sklearn-produces-different-results\n",
     "2. Python, H., & Eunice, J. (2017). How to make two plots side-by-side using Python. Stack Overflow. Retrieved 9 April 2019, from https://stackoverflow.com/questions/42818361/how-to-make-two-plots-side-by-side-using-python\n",
-    "3. "
+    "3. The Theorem that the Sum of the Eigenvalues of a Matrix is Equal to its Trace . (2019). Applet-magic.com. Retrieved 9 April 2019, from http://www.applet-magic.com/eigenvaluestrace.htm\n",
+    "4. "
    ]
   }
  ],
