--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -197,15 +197,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 422,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T09:59:45.892706Z",
-     "start_time": "2019-04-09T09:59:45.887696Z"
+     "end_time": "2019-04-09T17:58:58.658601Z",
+     "start_time": "2019-04-09T17:58:58.649627Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2)\n",
+      "0\n",
+      "(10, 2)\n",
+      "10\n",
+      "(10, 2)\n",
+      "20\n",
+      "(10, 2)\n",
+      "30\n",
+      "(10, 2)\n",
+      "40\n",
+      "(10, 2)\n",
+      "50\n",
+      "(10, 2)\n",
+      "60\n",
+      "(10, 2)\n",
+      "70\n",
+      "(10, 2)\n",
+      "80\n",
+      "(10, 2)\n",
+      "90\n",
+      "(10, 2)\n",
+      "100\n",
+      "(10, 2)\n",
+      "110\n",
+      "(10, 2)\n",
+      "120\n",
+      "(10, 2)\n",
+      "130\n",
+      "(10, 2)\n",
+      "140\n",
+      "(10, 2)\n",
+      "150\n",
+      "(10, 2)\n",
+      "160\n",
+      "(10, 2)\n",
+      "170\n",
+      "(10, 2)\n",
+      "180\n",
+      "(10, 2)\n",
+      "190\n",
+      "(10, 2)\n",
+      "200\n",
+      "(10, 2)\n",
+      "210\n",
+      "(10, 2)\n",
+      "220\n",
+      "(10, 2)\n",
+      "230\n",
+      "(10, 2)\n",
+      "240\n",
+      "(10, 2)\n",
+      "250\n",
+      "(10, 2)\n",
+      "260\n",
+      "(10, 2)\n",
+      "270\n",
+      "(10, 2)\n",
+      "280\n",
+      "(10, 2)\n",
+      "290\n",
+      "(10, 2)\n",
+      "300\n",
+      "(10, 2)\n",
+      "310\n",
+      "(10, 2)\n",
+      "320\n",
+      "(10, 2)\n",
+      "330\n",
+      "(10, 2)\n",
+      "340\n",
+      "(10, 2)\n",
+      "350\n",
+      "(10, 2)\n",
+      "360\n",
+      "(10, 2)\n",
+      "370\n",
+      "(10, 2)\n",
+      "380\n",
+      "(10, 2)\n",
+      "390\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = np.random.uniform(0,1,size=(2,1))\n",
+    "\n",
+    "for iter in range(1):\n",
+    "    for mini_batch in range(0,len(X),10):\n",
+    "        current_batch = X[mini_batch:mini_batch+10]\n",
+    "        print(current_batch.shape)\n",
+    "        print(mini_batch)"
+   ]
   },
   {
    "cell_type": "code",
