--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -197,11 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 426,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T17:58:58.658601Z",
-     "start_time": "2019-04-09T17:58:58.649627Z"
+     "end_time": "2019-04-09T17:59:37.286558Z",
+     "start_time": "2019-04-09T17:59:37.275587Z"
     }
    },
    "outputs": [
@@ -210,85 +210,85 @@
      "output_type": "stream",
      "text": [
       "(10, 2)\n",
-      "0\n",
+      "0.739560455104501\n",
       "(10, 2)\n",
-      "10\n",
+      "0.4866669693205644\n",
       "(10, 2)\n",
-      "20\n",
+      "0.9121063387989015\n",
       "(10, 2)\n",
-      "30\n",
+      "0.19349998535573215\n",
       "(10, 2)\n",
-      "40\n",
+      "0.4533325407368192\n",
       "(10, 2)\n",
-      "50\n",
+      "0.6098821233479765\n",
       "(10, 2)\n",
-      "60\n",
+      "1.0853842834864462\n",
       "(10, 2)\n",
-      "70\n",
+      "0.9964988141969078\n",
       "(10, 2)\n",
-      "80\n",
+      "0.7992392642474745\n",
       "(10, 2)\n",
-      "90\n",
+      "0.39963639894866404\n",
       "(10, 2)\n",
-      "100\n",
+      "0.7452582241519063\n",
       "(10, 2)\n",
-      "110\n",
+      "0.3521590573744031\n",
       "(10, 2)\n",
-      "120\n",
+      "0.44074826860219896\n",
       "(10, 2)\n",
-      "130\n",
+      "1.6778847549800973\n",
       "(10, 2)\n",
-      "140\n",
+      "0.7952705528746186\n",
       "(10, 2)\n",
-      "150\n",
+      "1.2344985343040602\n",
       "(10, 2)\n",
-      "160\n",
+      "1.1194998399119347\n",
       "(10, 2)\n",
-      "170\n",
+      "0.8402527405340366\n",
       "(10, 2)\n",
-      "180\n",
+      "0.6847588734243018\n",
       "(10, 2)\n",
-      "190\n",
+      "0.35437029955128224\n",
       "(10, 2)\n",
-      "200\n",
+      "1.372162095719782\n",
       "(10, 2)\n",
-      "210\n",
+      "0.8480999251079169\n",
       "(10, 2)\n",
-      "220\n",
+      "0.4781387487145191\n",
       "(10, 2)\n",
-      "230\n",
+      "0.7360210092015013\n",
       "(10, 2)\n",
-      "240\n",
+      "0.38526707198448723\n",
       "(10, 2)\n",
-      "250\n",
+      "0.8422046564597991\n",
       "(10, 2)\n",
-      "260\n",
+      "0.7284524720950156\n",
       "(10, 2)\n",
-      "270\n",
+      "0.6680729857637641\n",
       "(10, 2)\n",
-      "280\n",
+      "1.0435629507235737\n",
       "(10, 2)\n",
-      "290\n",
+      "0.1632146416107149\n",
       "(10, 2)\n",
-      "300\n",
+      "0.3042818935345252\n",
       "(10, 2)\n",
-      "310\n",
+      "0.8454354300099295\n",
       "(10, 2)\n",
-      "320\n",
+      "0.4002555395409232\n",
       "(10, 2)\n",
-      "330\n",
+      "1.1445260225521265\n",
       "(10, 2)\n",
-      "340\n",
+      "0.14827956501306566\n",
       "(10, 2)\n",
-      "350\n",
+      "1.073141452922411\n",
       "(10, 2)\n",
-      "360\n",
+      "0.29153884713290773\n",
       "(10, 2)\n",
-      "370\n",
+      "0.263889275737402\n",
       "(10, 2)\n",
-      "380\n",
+      "0.5784576345087926\n",
       "(10, 2)\n",
-      "390\n"
+      "1.1106394308959826\n"
      ]
     }
    ],
@@ -298,8 +298,9 @@
     "for iter in range(1):\n",
     "    for mini_batch in range(0,len(X),10):\n",
     "        current_batch = X[mini_batch:mini_batch+10]\n",
+    "        loss          = (current_batch - current_batch@w@w.T)**2\n",
     "        print(current_batch.shape)\n",
-    "        print(mini_batch)"
+    "        print(loss.mean())"
    ]
   },
   {
