--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -299,7 +299,8 @@
     "for iter in range(1):\n",
     "    for mini_batch in range(0,len(X),10):\n",
     "        current_batch = X[mini_batch:mini_batch+10]\n",
-    "        loss          = (current_batch - current_batch@w@w.T)**2\n",
+    "        loss          = current_batch - current_batch@w@w.T\n",
+    "        grad          = ()\n",
     "        print(current_batch.shape)\n",
     "        print(loss.mean())"
    ]
