Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -197,11 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 434,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T18:02:41.713372Z",
-     "start_time": "2019-04-09T18:02:41.702401Z"
+     "end_time": "2019-04-09T18:16:54.088454Z",
+     "start_time": "2019-04-09T18:16:54.049551Z"
     }
    },
    "outputs": [
@@ -209,86 +209,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 2)\n",
-      "0.6287490903746664\n",
-      "(10, 2)\n",
-      "0.41867434649908103\n",
-      "(10, 2)\n",
-      "0.7758492887908509\n",
-      "(10, 2)\n",
-      "0.1630436675779054\n",
-      "(10, 2)\n",
-      "0.38710457337501375\n",
-      "(10, 2)\n",
-      "0.5184823915345673\n",
-      "(10, 2)\n",
-      "0.9196650395803578\n",
-      "(10, 2)\n",
-      "0.8403329823207228\n",
-      "(10, 2)\n",
-      "0.6842374214994617\n",
-      "(10, 2)\n",
-      "0.34115902593055447\n",
-      "(10, 2)\n",
-      "0.6318068665654952\n",
-      "(10, 2)\n",
-      "0.2948005756892452\n",
-      "(10, 2)\n",
-      "0.3766529680977439\n",
-      "(10, 2)\n",
-      "1.4218229872892425\n",
-      "(10, 2)\n",
-      "0.674708119757161\n",
-      "(10, 2)\n",
-      "1.0475133048547167\n",
-      "(10, 2)\n",
-      "0.9555866303675377\n",
-      "(10, 2)\n",
-      "0.7138673519236484\n",
-      "(10, 2)\n",
-      "0.577744838089705\n",
-      "(10, 2)\n",
-      "0.3032101345781363\n",
-      "(10, 2)\n",
-      "1.1635552652817016\n",
-      "(10, 2)\n",
-      "0.7196399600316065\n",
-      "(10, 2)\n",
-      "0.4033132350751436\n",
-      "(10, 2)\n",
-      "0.6211456963412044\n",
-      "(10, 2)\n",
-      "0.3252299942255476\n",
-      "(10, 2)\n",
-      "0.7099813071331067\n",
-      "(10, 2)\n",
-      "0.6152244151575091\n",
-      "(10, 2)\n",
-      "0.5685288984685759\n",
-      "(10, 2)\n",
-      "0.885339493203505\n",
-      "(10, 2)\n",
-      "0.1373061688746167\n",
-      "(10, 2)\n",
-      "0.2605653353180928\n",
-      "(10, 2)\n",
-      "0.7206609951201604\n",
-      "(10, 2)\n",
-      "0.3373566899273523\n",
-      "(10, 2)\n",
-      "0.9734421163912493\n",
-      "(10, 2)\n",
-      "0.12416972518632127\n",
-      "(10, 2)\n",
-      "0.9058239115950935\n",
-      "(10, 2)\n",
-      "0.24423389963885372\n",
-      "(10, 2)\n",
-      "0.22409475636041756\n",
-      "(10, 2)\n",
-      "0.48602846447534065\n",
-      "(10, 2)\n",
-      "0.9394266878977147\n"
+      "Iter :  0  Loss:  38.50348856338796\n",
+      "Iter :  1  Loss:  39.64191571222648\n",
+      "Iter :  2  Loss:  39.88022079362238\n",
+      "Iter :  3  Loss:  39.92888921830507\n",
+      "Iter :  4  Loss:  39.93897021108643\n",
+      "Iter :  5  Loss:  39.94114839381476\n",
+      "Iter :  6  Loss:  39.94165879652203\n",
+      "Iter :  7  Loss:  39.9417947642497\n",
+      "Iter :  8  Loss:  39.94183717803188\n",
+      "Iter :  9  Loss:  39.941852468871105\n"
      ]
     }
    ],
@@ -296,13 +226,16 @@
     "w = np.random.uniform(0,1,size=(2,1))\n",
     "w = w/(np.sqrt(np.sum(w**2)))\n",
     "\n",
-    "for iter in range(1):\n",
+    "for iter in range(10):\n",
+    "    cum_loss = 0\n",
     "    for mini_batch in range(0,len(X),10):\n",
     "        current_batch = X[mini_batch:mini_batch+10]\n",
     "        loss          = current_batch - current_batch@w@w.T\n",
-    "        grad          = ()\n",
-    "        print(current_batch.shape)\n",
-    "        print(loss.mean())"
+    "        grad          = (current_batch.T@loss + loss.T @ current_batch) @ w\n",
+    "        w             = w - 0.001 * grad\n",
+    "        w = w/(np.sqrt(np.sum(w**2)))\n",
+    "        cum_loss      = cum_loss + (loss**2).mean()\n",
+    "    print('Iter : ',iter,\" Loss: \",cum_loss)\n"
    ]
   },
   {
