Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 662,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T18:38:13.001733Z",
-     "start_time": "2019-04-09T18:38:12.996746Z"
+     "end_time": "2019-04-09T20:07:05.359872Z",
+     "start_time": "2019-04-09T20:07:05.353887Z"
     },
     "code_folding": []
    },
@@ -17,6 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.datasets import make_moons,make_classification,make_regression\n",
+    "import sys\n",
     "np.random.seed(23)"
    ]
   },
@@ -28,7 +29,9 @@
      "end_time": "2019-04-09T18:38:13.702843Z",
      "start_time": "2019-04-09T18:38:13.575170Z"
     },
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
