Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -484,11 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 668,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T20:08:16.438101Z",
-     "start_time": "2019-04-09T20:08:16.225669Z"
+     "end_time": "2019-04-09T20:08:59.005128Z",
+     "start_time": "2019-04-09T20:08:58.985209Z"
     }
    },
    "outputs": [
@@ -496,11 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1.2322330353171156\n",
-      "Iter :  20  Loss:  1.2322330360597116\n",
-      "Iter :  40  Loss:  1.232233036802949\n",
-      "Iter :  60  Loss:  1.2322330375455859\n",
-      "Iter :  80  Loss:  1.2322330382886644\n"
+      "(1, 1)\n"
      ]
     },
     {
@@ -533,7 +529,9 @@
     "        layer1 = current_batch @ w1\n",
     "        layer2 = layer1        @ w2\n",
     "        \n",
-    "        grad2 = ()\n",
+    "        grad2 = (np.eye(1) + layer1.T @ layer1 ) @ w2\n",
+    "        print(grad2.shape)\n",
+    "        sys.exit()\n",
     "        loss          = current_batch - current_batch@w@w.T\n",
     "        grad          = (np.eye(2) + current_batch.T @ current_batch ) @ w + (current_batch.T@loss + loss.T @ current_batch) @ w\n",
     "        m = 0.9 * m + 0.1 * grad\n",
