Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -530,6 +530,7 @@
     "        layer2 = layer1        @ w2\n",
     "        \n",
     "        grad2 = (np.eye(1) + layer1.T @ layer1 ) @ w2\n",
+    "        grad1 = \n",
     "        print(grad2.shape)\n",
     "        sys.exit()\n",
     "        loss          = current_batch - current_batch@w@w.T\n",
