Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -640,10 +640,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 673,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T20:36:56.837268Z",
+     "start_time": "2019-04-09T20:36:56.831284Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 565.20658223]\n",
+      " [-565.20928555]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = np.random.randn(2,1)\n",
+    "print(X.T@X@temp)"
+   ]
   },
   {
    "cell_type": "code",
