Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -640,11 +640,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 680,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T20:36:56.837268Z",
-     "start_time": "2019-04-09T20:36:56.831284Z"
+     "end_time": "2019-04-09T20:38:03.860402Z",
+     "start_time": "2019-04-09T20:38:03.855416Z"
     }
    },
    "outputs": [
@@ -652,14 +652,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 565.20658223]\n",
-      " [-565.20928555]]\n"
+      "[[-477.95741929]\n",
+      " [ 477.93809928]]\n",
+      "[[-477.95741929]\n",
+      " [ 477.93809928]]\n"
      ]
     }
    ],
    "source": [
     "temp = np.random.randn(2,1)\n",
-    "print(X.T@X@temp)"
+    "print((np.eye(2)+X.T@X)@temp)\n",
+    "print(temp+X.T@X@temp)\n",
+    "\n",
+    "# print(X.T@X@temp)"
    ]
   },
   {
