Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -640,11 +640,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 685,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T20:38:03.860402Z",
-     "start_time": "2019-04-09T20:38:03.855416Z"
+     "end_time": "2019-04-09T21:08:45.869261Z",
+     "start_time": "2019-04-09T21:08:45.863277Z"
     }
    },
    "outputs": [
@@ -652,10 +652,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-477.95741929]\n",
-      " [ 477.93809928]]\n",
-      "[[-477.95741929]\n",
-      " [ 477.93809928]]\n"
+      "[[ 833.011981  ]\n",
+      " [-833.59422871]]\n",
+      "[[ 833.011981  ]\n",
+      " [-833.59422871]]\n",
+      "[[ 832.14489184]\n",
+      " [-832.37891379]]\n"
      ]
     }
    ],
@@ -663,8 +665,7 @@
     "temp = np.random.randn(2,1)\n",
     "print((np.eye(2)+X.T@X)@temp)\n",
     "print(temp+X.T@X@temp)\n",
-    "\n",
-    "# print(X.T@X@temp)"
+    "print(X.T@X@temp)"
    ]
   },
   {
