Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -485,11 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 686,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T20:08:59.005128Z",
-     "start_time": "2019-04-09T20:08:58.985209Z"
+     "end_time": "2019-04-09T21:12:43.388446Z",
+     "start_time": "2019-04-09T21:12:43.364015Z"
     }
    },
    "outputs": [
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 1)\n"
+      "(10, 1)\n"
      ]
     },
     {
@@ -507,6 +507,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -530,9 +538,9 @@
     "        layer1 = current_batch @ w1\n",
     "        layer2 = layer1        @ w2\n",
     "        \n",
-    "        grad2 = (np.eye(1) + layer1.T @ layer1 ) @ w2\n",
-    "        grad1 = \n",
-    "        print(grad2.shape)\n",
+    "        grad2 = -layer1.T @ layer1 @ w2\n",
+    "        grad1 = (-layer1@w2@w2.T)\n",
+    "        print(grad1.shape)\n",
     "        sys.exit()\n",
     "        loss          = current_batch - current_batch@w@w.T\n",
     "        grad          = (np.eye(2) + current_batch.T @ current_batch ) @ w + (current_batch.T@loss + loss.T @ current_batch) @ w\n",
