Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -485,11 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 687,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:12:43.388446Z",
-     "start_time": "2019-04-09T21:12:43.364015Z"
+     "end_time": "2019-04-09T21:13:07.123226Z",
+     "start_time": "2019-04-09T21:13:07.101258Z"
     }
    },
    "outputs": [
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 1)\n"
+      "(2, 1)\n"
      ]
     },
     {
@@ -507,14 +507,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -539,14 +531,12 @@
     "        layer2 = layer1        @ w2\n",
     "        \n",
     "        grad2 = -layer1.T @ layer1 @ w2\n",
-    "        grad1 = (-layer1@w2@w2.T)\n",
-    "        print(grad1.shape)\n",
-    "        sys.exit()\n",
-    "        loss          = current_batch - current_batch@w@w.T\n",
-    "        grad          = (np.eye(2) + current_batch.T @ current_batch ) @ w + (current_batch.T@loss + loss.T @ current_batch) @ w\n",
-    "        m = 0.9 * m + 0.1 * grad\n",
-    "        w = w - 0.00000000000001* m\n",
-    "        w = w/(np.sqrt(np.sum(w**2)))\n",
+    "        grad1 = current_batch.T@(-layer1@w2@w2.T)\n",
+    "        \n",
+    "        w2 = w2 - 0.00000000000001* grad2\n",
+    "        w1 = w1 - 0.00000000000001* grad1\n",
+    "        \n",
+    "        \n",
     "        cum_loss      = cum_loss + (loss**2).mean()\n",
     "        \n",
     "    if iter%20==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
