Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 707,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T20:07:05.359872Z",
-     "start_time": "2019-04-09T20:07:05.353887Z"
+     "end_time": "2019-04-09T21:18:30.431104Z",
+     "start_time": "2019-04-09T21:18:30.425121Z"
     },
     "code_folding": []
    },
@@ -18,7 +18,16 @@
     "from sklearn.utils import shuffle\n",
     "from sklearn.datasets import make_moons,make_classification,make_regression\n",
     "import sys\n",
-    "np.random.seed(23)"
+    "np.random.seed(23)\n",
+    "\n",
+    "def _sym_decorrelation(W):\n",
+    "    \"\"\" Symmetric decorrelation\n",
+    "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
+    "    \"\"\"\n",
+    "    s, u = linalg.eigh(np.dot(W, W.T))\n",
+    "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
+    "    # the eigenvalues) of W * W.T\n",
+    "    return np.dot(np.dot(u * (1. / np.sqrt(s)), u.T), W)"
    ]
   },
   {
@@ -703,18 +712,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 708,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T21:18:54.118103Z",
+     "start_time": "2019-04-09T21:18:54.099127Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'linalg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-708-98744838ef48>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# whiten\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtemp2\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-707-ee54d35a8223>\u001b[0m in \u001b[0;36m_sym_decorrelation\u001b[1;34m(W)\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m<\u001b[0m\u001b[1;33m-\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m^\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \"\"\"\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[1;31m# u (resp. s) contains the eigenvectors (resp. square roots of\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m# the eigenvalues) of W * W.T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'linalg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# whiten\n",
+    "temp = np.random.randn(2,2)\n",
+    "temp2= _sym_decorrelation(temp)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 706,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:08:45.869261Z",
-     "start_time": "2019-04-09T21:08:45.863277Z"
+     "end_time": "2019-04-09T21:17:21.340193Z",
+     "start_time": "2019-04-09T21:17:21.333210Z"
     }
    },
    "outputs": [
@@ -722,16 +753,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 833.011981  ]\n",
-      " [-833.59422871]]\n",
-      "[[ 833.011981  ]\n",
-      " [-833.59422871]]\n",
-      "[[ 832.14489184]\n",
-      " [-832.37891379]]\n"
+      "[[-331.01649274]\n",
+      " [ 330.76155127]]\n",
+      "[[-331.01649274]\n",
+      " [ 330.76155127]]\n",
+      "[[-330.52681434]\n",
+      " [ 330.4243461 ]]\n"
      ]
     }
    ],
    "source": [
+    "# gradient\n",
     "temp = np.random.randn(2,1)\n",
     "print((np.eye(2)+X.T@X)@temp)\n",
     "print(temp+X.T@X@temp)\n",
@@ -740,11 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 705,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T10:15:21.142995Z",
-     "start_time": "2019-04-09T10:15:21.137011Z"
+     "end_time": "2019-04-09T21:17:19.441884Z",
+     "start_time": "2019-04-09T21:17:19.436790Z"
     }
    },
    "outputs": [
@@ -752,17 +784,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.89331633 0.68456331 0.25258339 0.82745072 0.29307408]\n",
-      " [0.47457878 0.91735075 0.54523007 0.07586395 0.99624075]\n",
-      " [0.65001589 0.28521589 0.88211856 0.18379295 0.85724192]\n",
-      " [0.40704497 0.11202436 0.04486211 0.78768325 0.11895718]\n",
-      " [0.98123446 0.293183   0.11991856 0.91142301 0.22079928]]\n",
-      "3.701268163918878\n",
-      "3.7012681639188787\n"
+      "[[0.59957073 0.4179     0.33564758 0.47885035 0.19466667]\n",
+      " [0.97630966 0.79208879 0.5297333  0.8280434  0.59174909]\n",
+      " [0.69528467 0.71563046 0.4198738  0.75446309 0.57951776]\n",
+      " [0.19209108 0.28379276 0.26153899 0.28961355 0.15620311]\n",
+      " [0.5442491  0.94424172 0.60280994 0.1614653  0.44792688]]\n",
+      "2.5490737389147675\n",
+      "2.549073738914767\n"
      ]
     }
    ],
    "source": [
+    "# trace\n",
     "temp = np.random.uniform(size=(5,5))\n",
     "print(temp)\n",
     "evalue,evector = np.linalg.eigh(temp)\n",
