Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 709,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:18:30.431104Z",
-     "start_time": "2019-04-09T21:18:30.425121Z"
+     "end_time": "2019-04-09T21:19:01.120367Z",
+     "start_time": "2019-04-09T21:19:01.115398Z"
     },
     "code_folding": []
    },
@@ -24,7 +24,7 @@
     "    \"\"\" Symmetric decorrelation\n",
     "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
     "    \"\"\"\n",
-    "    s, u = linalg.eigh(np.dot(W, W.T))\n",
+    "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
     "    return np.dot(np.dot(u * (1. / np.sqrt(s)), u.T), W)"
@@ -596,15 +596,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 716,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T21:20:39.881526Z",
+     "start_time": "2019-04-09T21:20:39.858587Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (1,2) and (1,10) not aligned: 2 (dim 1) != 1 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-716-e506c1f4116a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mlayer2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlayer1\u001b[0m        \u001b[1;33m@\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mloss\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mlayer2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mlayer2\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m         \u001b[0mgrad2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mlayer1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mlayer1\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mgrad1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcurrent_batch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m@\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mlayer1\u001b[0m\u001b[1;33m@\u001b[0m\u001b[0mw2\u001b[0m\u001b[1;33m@\u001b[0m\u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (1,2) and (1,10) not aligned: 2 (dim 1) != 1 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "# iterative (more dim)\n",
     "# w = np.random.uniform(0,1,size=(2,1))\n",
     "w1 = np.random.randn(2,2)\n",
     "w2 = np.random.randn(2,1)\n",
-    "w1 = w1/(np.sqrt(np.sum(w1**2)))\n",
+    "w1 = _sym_decorrelation(w1)\n",
     "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "\n",
     "temp_X = np.copy(X)\n",
@@ -623,7 +640,7 @@
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
-    "        w1 = w1/(np.sqrt(np.sum(w1**2)))\n",
+    "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
@@ -712,31 +729,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 715,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:18:54.118103Z",
-     "start_time": "2019-04-09T21:18:54.099127Z"
+     "end_time": "2019-04-09T21:20:18.506883Z",
+     "start_time": "2019-04-09T21:20:18.499920Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'linalg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-708-98744838ef48>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# whiten\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtemp2\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-707-ee54d35a8223>\u001b[0m in \u001b[0;36m_sym_decorrelation\u001b[1;34m(W)\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m<\u001b[0m\u001b[1;33m-\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m^\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \"\"\"\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[1;31m# u (resp. s) contains the eigenvectors (resp. square roots of\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m# the eigenvalues) of W * W.T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'linalg' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.20184052  1.04537128]\n",
+      " [ 0.53816197  0.81211867]]\n",
+      "[0.57476769 1.32375898]\n",
+      "[[-0.53924154  0.84215115]\n",
+      " [ 0.84215115  0.53924154]]\n",
+      "[1. 1.]\n"
      ]
     }
    ],
    "source": [
     "# whiten\n",
     "temp = np.random.randn(2,2)\n",
-    "temp2= _sym_decorrelation(temp)"
+    "temp2= _sym_decorrelation(temp)\n",
+    "print(temp)\n",
+    "print(np.sqrt(np.sum(temp**2,0)))\n",
+    "print(temp2)\n",
+    "print(np.sqrt(np.sum(temp2**2,0)))"
    ]
   },
   {
