Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -808,33 +808,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 776,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:42:19.543073Z",
-     "start_time": "2019-04-09T21:42:19.538052Z"
+     "end_time": "2019-04-09T21:43:29.760371Z",
+     "start_time": "2019-04-09T21:43:22.515626Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[   1.559,   25.739,    0.324],\n",
-       "       [  24.022,  102.108,  -11.725],\n",
-       "       [   7.644,   45.583,   -2.988],\n",
-       "       ...,\n",
-       "       [  -1.796,    0.205,    1.322],\n",
-       "       [ -48.273, -199.279,   23.898],\n",
-       "       [ -60.943, -277.78 ,   28.683]])"
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
       ]
      },
-     "execution_count": 775,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "projected_mine * 100"
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "init_notebook_mode(connected=True)\n",
+    "data = [projected_mine]\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=)\n",
+    "iplot(fig)\n"
    ]
   },
   {
