Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -808,11 +808,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:43:29.760371Z",
-     "start_time": "2019-04-09T21:43:22.515626Z"
+     "start_time": "2019-04-09T21:45:52.519Z"
     }
    },
    "outputs": [
@@ -831,11 +830,26 @@
    ],
    "source": [
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "import plotly.graph_objs as go\n",
     "init_notebook_mode(connected=True)\n",
-    "data = [projected_mine]\n",
     "\n",
-    "fig = go.Figure(data=data, layout=)\n",
-    "iplot(fig)\n"
+    "trace1 = go.Scatter3d(\n",
+    "    x=projected_mine[:,0],\n",
+    "    y=projected_mine[:,1],\n",
+    "    z=projected_mine[:,2],\n",
+    "    mode='markers',\n",
+    "    marker=dict(\n",
+    "        size=12,\n",
+    "        line=dict(\n",
+    "            color='rgba(217, 217, 217, 0.14)',\n",
+    "            width=0.5\n",
+    "        ),\n",
+    "        opacity=0.8\n",
+    "    )\n",
+    ")\n",
+    "data = [trace1]\n",
+    "fig  = go.Figure(data=data)\n",
+    "iplot(fig)"
    ]
   },
   {
