Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:53:28.444412Z",
-     "start_time": "2019-04-09T21:53:25.586543Z"
+     "end_time": "2019-04-09T21:54:23.085141Z",
+     "start_time": "2019-04-09T21:54:23.077139Z"
     },
     "code_folding": []
    },
@@ -29,7 +29,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.datasets import make_moons,make_classification,make_regression\n",
+    "from sklearn.datasets import make_moons,make_classification,make_regression,make_circles\n",
     "import sys\n",
     "from mpl_toolkits.mplot3d import Axes3D \n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
@@ -76,6 +76,8 @@
    "source": [
     "# See the data \n",
     "X, y = make_moons(n_samples=300, noise=0.02)\n",
+    "X, y = \n",
+    "(n_samples=300, noise=0.02)\n",
     "# X,y = make_regression(n_samples=400, n_features=1,noise=5); X = np.concatenate((X,y[:,None]),1) \n",
     "\n",
     "# ======== WE ARE CENTERING AND STD =======\n",
