Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T21:54:23.085141Z",
-     "start_time": "2019-04-09T21:54:23.077139Z"
+     "end_time": "2019-04-09T21:58:01.468237Z",
+     "start_time": "2019-04-09T21:58:01.459261Z"
     },
     "code_folding": []
    },
@@ -46,7 +46,7 @@
     "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
-    "    return np.dot(np.dot(u * (1. / np.sqrt(s+1e-8)), u.T), W)"
+    "    return np.dot(np.dot(u * (1. / (np.sqrt(s+1e-2)), u.T), W)"
    ]
   },
   {
