--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1808,6 +1808,12 @@
     "# iterative (more dim)\n",
     "# w = np.random.uniform(0,1,size=(2,1))\n",
     "\n",
+    "numberes = 3\n",
+    "def g (x): return x*(1/numberes)\n",
+    "def gg(x): return x*numberes\n",
+    "\n",
+    "def g_grad(x):  return ((1/numberes)*(x*np.sign(x))**(1-(1/numberes)))*np.sign(x)\n",
+    "def gg_grad(x): return (numberes*(x*np.sign(x))**(numberes-1))*np.sign(x)\n",
     "\n",
     "w1 = np.random.randn(2,2)\n",
     "w2 = np.random.randn(2,3)\n",
