--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1805,7 +1805,8 @@
    },
    "outputs": [],
    "source": [
-    "#  ac"
+    "#  act functions \n",
+    "def g(x): return np.arctan(x)"
    ]
   },
   {
