Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1806,7 +1806,8 @@
    "outputs": [],
    "source": [
     "#  act functions \n",
-    "def g(x): return np.arctan(x)"
+    "def g(x) : return np.arctan(x)\n",
+    "def gg(x): return np.tan(x)"
    ]
   },
   {
