--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1832,10 +1832,10 @@
     "        \n",
     "        layer1 = current_batch @ w1\n",
     "        layer1a= g(layer1)\n",
-    "        layer2 = layer1a        @ w2\n",
-    "        loss  = w2.T @ layer1.T @ layer1 @ w2\n",
-    "        grad2 = -layer1.T @ layer1 @ w2\n",
-    "        grad1 = current_batch.T@(-layer1@w2@w2.T)\n",
+    "        layer2 = layer1a       @ w2\n",
+    "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
+    "        grad2 = -layer1a.T @ layer1a @ w2\n",
+    "        grad1 = current_batch.T@((-layer1a@w2@w2.T)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
