Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1809,7 +1809,7 @@
     "def g(x) : return np.arctan(x)\n",
     "def gg(x): return np.tan(x)\n",
     "\n",
-    "def g_grad(x): return "
+    "def g_grad(x): return 1/(1+x**2)"
    ]
   },
   {
@@ -1837,7 +1837,7 @@
     "        layer2 = layer1a       @ w2\n",
     "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        grad2 = -layer1a.T @ layer1a @ w2\n",
-    "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*\n",
+    "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad())\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
